# myBookShelf

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: OCRAnalyis.ipynb  ODAnalysis.ipynb  SLMAnalysis.ipynb  log_demo_result.txt
prompts/: system_bookAnalyzer.md
results_test/: res_bbox_0.txt  res_bbox_1.txt  res_bbox_10.txt  res_bbox_11.txt  res_bbox_12.txt  res_bbox_13.txt  res_bbox_2.txt  res_bbox_3.txt  res_bbox_4.txt  res_bbox_5.txt  res_bbox_6.txt  res_bbox_7.txt  res_bbox_8.txt  res_bbox_9.txt
src/: bookAnalysis.py  bookDetector.py  orchestrator.py  wordsExtraction.py
