[project]
name = "myBookShelf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr>=1.7.2",
    "lmdb>=1.7.5",
    "natsort>=8.4.0",
    "opencv-python>=3.4.2",
    "torchvision>=0.2.1",
    "transformers>=4.57.6",
    "ultralytics>=8.4.4",
]
