[project]
name = "myBookShelf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "easyocr>=1.7.2",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.0",
    "lmdb>=1.7.5",
    "natsort>=8.4.0",
    "opencv-python>=3.4.2",
    "torchvision>=0.2.1",
    "transformers>=4.57.6",
    "ultralytics>=8.4.4",
]
